# RandomGomoku

./: .README.md.swp  GUI.py  GomokuEnv.py  README.md  agent.py  dqn.py  function.md  main.py  play.py  pyproject.toml  train.py
RandomGomoku/: Dependency.py  GetBoard.py  __init__.py  __main__.py  main.py
RandomGomoku/Board/: Board.py  RandomSetter.py  __init__.py
RandomGomoku/Interfaces/: CreatingMass.py  IHeadMass.py  IMass.py  __init__.py
RandomGomoku/Mass/: HeadMass.py  Mass.py  __init__.py
RandomGomoku/const/: Stone.py  __init__.py
dqn_model/: qnet.npz
src/: Dependency.py  main.py
src/Board/: Board.py  __init__.py
src/Interfaces/: IHeadMass.py  IMass.py  __init__.py
src/Mass/: HeadMass.py  Mass.py
src/const/: Stone.py  __init__.py
